10Apr01=======================================================================
1. altered PC21 logic somewhat to eliminate dup PC21s
2. disconnect should remove dangling local users in the routing table.
09Apr01=======================================================================
1. changed lockfile name to cluster.lck (from .lock) for MSWin's benefit
08Apr01=======================================================================
1. added a quick installation guide to the admin manual and removed references
to client.pl (g0vgs)
01Apr01=======================================================================
1. changed agwrestart semantics. You need to use main::agwrestart() in your
crontabs rather than AGWMsg::init();
2. try to thread winclient.pl for MSWin32.
31Mar01=======================================================================
1. added agwrestart command
2. add Iains Windoze installation manual (g0vgs)
3. various alterations to adminmanual and initial version of the CVS changes
file (g0vgs)
30Mar01=======================================================================
1. fix errors on accept in ExtMsg and in Msg
2. fix the non-blocking problems of connects (and other things in general).
non-blocking only works for unix implementations at the moment.
3. add rinit command (sends a PC20)
4. improve debuging so that stuff is always escaped and a new 'raw' debug 
mode that shows everything sent and received in glorious hex and characters
29Mar01=======================================================================
1. add better tracking of AGW circuits (possibly)
2. add set and unset/agwmonitor (ing) [for all the notice it seems to take]
28Mar01=======================================================================
1. AGW engine stuff now accepts incoming calls and at least attempts to do
outgoing ones. YMMV.
2. fixed 'always' telnet on a client line in a connect script
27Mar01=======================================================================